[gd_scene load_steps=3 format=2]

[ext_resource path="res://Image_assets/backgorund temp.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/Scene_Selection.gd" type="Script" id=2]

[node name="Scene_Selection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -34.0
margin_bottom = 34.0

[node name="Button_1" type="Button" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
text = "Test Scene"

[node name="Button_2" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 44.0
text = "Scene filler"

[node name="Button_3" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 68.0
text = "Scene filler"

[node name="Button_4" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 1024.0
margin_bottom = 92.0
text = "Back"

[node name="BackgorundTemp" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 513, 299 )
scale = Vector2( 1.2775, 1.33333 )
texture = ExtResource( 1 )

[connection signal="pressed" from="VBoxContainer/Button_1" to="." method="_on_Button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_2" to="." method="_on_Button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_3" to="." method="_on_Button_3_pressed"]
[connection signal="pressed" from="VBoxContainer/Button_4" to="." method="_on_Button_4_pressed"]
